--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <cz.cvut.kbss.jopa.version>0.20.0</cz.cvut.kbss.jopa.version>
         <cz.cvut.kbss.jb4jsonld.version>0.10.2</cz.cvut.kbss.jb4jsonld.version>
         <com.github.ledsoft.jopa-spring-transactions.version>0.1.5</com.github.ledsoft.jopa-spring-transactions.version>
+        <org.eclipse.rdf4j.version>3.7.7</org.eclipse.rdf4j.version>
 
     </properties>
     <dependencies>
@@ -61,12 +62,27 @@
 
             <version>0.420</version>
         </dependency>
-
         <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
-            <artifactId>ontodriver-rdf4j</artifactId>
+            <artifactId>ontodriver-jena</artifactId>
             <version>0.420</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>cz.cvut.kbss.jopa</groupId>-->
+<!--            <artifactId>ontodriver-rdf4j</artifactId>-->
+<!--            <version>0.420</version>-->
+<!--        </dependency>-->
 
         <!-- Declarative transactions integration for JOPA -->
         <dependency>
@@ -100,6 +116,24 @@
         <!--			<artifactId>spring-aspects</artifactId>-->
         <!--			<version>6.0.7</version>-->
         <!--		</dependency>-->
+
+
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-rio-rdfjson</artifactId>
+            <version>${org.eclipse.rdf4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-rio-rdfxml</artifactId>
+            <version>${org.eclipse.rdf4j.version}</version>
+        </dependency>
 
 
         <dependency>
