WIP: replacing JENA with RD4J

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#repositoryUrl=file:/tmp/jopa/repositories/example04
 #repository.type=fuseki
 #repositoryUrl=http://localhost:3030/jena
-repository.type=tdb
-repositoryUrl=/tmp/jopa/
-#driver=cz.cvut.kbss.ontodriver.rdf4j.Rdf4jDataSource
+#repository.type=tdb
+#repositoryUrl=/tmp/jopa/
+repositoryUrl=file:/tmp/jopa/repositories/example04
+driver=cz.cvut.kbss.ontodriver.rdf4j.Rdf4jDataSource
 logging.level.root=INFO
