--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <java.version>1.8</java.version>
 
         <org.aspectj.version>1.9.7</org.aspectj.version>
-        <cz.cvut.kbss.jopa.version>0.20.0</cz.cvut.kbss.jopa.version>
+        <cz.cvut.kbss.jopa.version>0.21.0-SNAPSHOT</cz.cvut.kbss.jopa.version>
         <cz.cvut.kbss.jb4jsonld.version>0.10.2</cz.cvut.kbss.jb4jsonld.version>
         <com.github.ledsoft.jopa-spring-transactions.version>0.1.5</com.github.ledsoft.jopa-spring-transactions.version>
         <org.eclipse.rdf4j.version>3.7.7</org.eclipse.rdf4j.version>
@@ -33,60 +33,61 @@
         <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
             <artifactId>jopa-api</artifactId>
-            <version>0.420</version>
+            <version>${cz.cvut.kbss.jopa.version}</version>
         </dependency>
         <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
             <artifactId>jopa-impl</artifactId>
-            <version>0.420</version>
+            <version>${cz.cvut.kbss.jopa.version}</version>
         </dependency>
         <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
             <artifactId>ontodriver-api</artifactId>
-            <version>0.420</version>
+            <version>${cz.cvut.kbss.jopa.version}</version>
         </dependency>
         <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
-            <artifactId>ontodriver-jena</artifactId>
-            <version>0.420</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.logging.log4j</groupId>
-                    <artifactId>log4j-slf4j-impl</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>ontodriver-rdf4j</artifactId>
+            <version>${cz.cvut.kbss.jopa.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena</artifactId>
-            <version>3.17.0</version>
-            <type>pom</type>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.logging.log4j</groupId>
-                    <artifactId>log4j-slf4j-impl</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
 <!--        <dependency>-->
 <!--            <groupId>cz.cvut.kbss.jopa</groupId>-->
-<!--            <artifactId>ontodriver-rdf4j</artifactId>-->
-<!--            <version>0.420</version>-->
+<!--            <artifactId>ontodriver-jena</artifactId>-->
+<!--            <version>${cz.cvut.kbss.jopa.version}</version>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.slf4j</groupId>-->
+<!--                    <artifactId>slf4j-log4j12</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.logging.log4j</groupId>-->
+<!--                    <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
 <!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.apache.jena</groupId>-->
+<!--            <artifactId>apache-jena</artifactId>-->
+<!--            <version>3.17.0</version>-->
+<!--            <type>pom</type>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.slf4j</groupId>-->
+<!--                    <artifactId>slf4j-log4j12</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>log4j</groupId>-->
+<!--                    <artifactId>log4j</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.logging.log4j</groupId>-->
+<!--                    <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+
+
 
         <!-- Declarative transactions integration for JOPA -->
         <dependency>
@@ -223,11 +224,11 @@
 
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>local-maven-repo</id>
-            <url>file:///home/kulda/Documents/OI/dipl/multiple-inheritance-demo/maven-repo</url>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>local-maven-repo</id>-->
+<!--            <url>file:///home/kulda/Documents/OI/dipl/multiple-inheritance-demo/maven-repo</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
 </project>
